# gmail-ai-manager

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: .env.example  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: canonical-labels.ts  env.ts  server.ts  test-setup.ts
apps/api/src/agents/: specialists.ts
apps/api/src/audit/: record.test.ts  record.ts
apps/api/src/auth/: crypto.ts  google.ts  middleware.ts  session.ts
apps/api/src/chat/: agent-runner.ts  event-bus.ts  persona.ts
apps/api/src/classify/: registry.ts  run.ts
apps/api/src/claude/: ai-guidance.ts  classifier.ts  client.test.ts  client.ts  inbox-rule-propose.ts  labels.ts  preflight.ts  rule-maintenance.ts  translator.ts
apps/api/src/embeddings/: encoder.ts  indexer.ts  store.ts
apps/api/src/gmail/: actions.test.ts  actions.ts  apply-rule-to-scope.ts  error.ts  (+11 more)
apps/desktop/: README.md  package.json
apps/desktop/scripts/: install.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css
docs/: CNAME  index.html  install.sh  style.css
scripts/: backup.sh  check-requirements.sh  install-from-source.sh  install-launch-agent.sh  launch.sh  restore.sh  rotate-logs.sh  setup-google-oauth.sh  uninstall-launch-agent.sh  update.sh
(+65 files in other folders)
